Fixed 19789: Asterisk sign misaligned Admin forgot password.

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -272,15 +272,6 @@
 //
 //  Field
 //  ---------------------------------------------
-.login-content {
-    .admin__field {
-         label[for="captcha"] > span {
-            &:after {
-                margin-top:-1.5rem;
-            }
-        }
-    }
-}
 .admin__field {
     &:extend(.abs-field-sizes all);
     margin-bottom: 0;
